--- a/src/NetflixTitle.css
+++ b/src/NetflixTitle.css
@@ -23,7 +23,7 @@
 }
 
 .animate.netflix-logo {
-  animation: zoomOut 3s forwards ease-in-out;
+  animation: zoomOut 2s forwards cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @keyframes zoomOut {
